--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<style>
+body {
+    background-color: lightblue;
+  }
+</style>
 <html>
 <body>
 <h1>The all holy rules of Leros</h1>
