--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <style>
 body {
-    background-color: lightblue;
+    color: yellowgreen;
+    background-color: black;
   }
 </style>
 <html>
