--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <style>
 body {
-    color: yellowgreen;
+    color: rgb(190, 205, 50);
     background-color: black;
+    font-family:  Tahoma, 'Segoe UI',Geneva, Verdana, sans-serif;
   }
 </style>
 <html>
 <body>
-<h1>The all holy rules of Leros</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <center>
+<h3>The 8 holy rules of Leros</h3>
+<br>
+<h1>1. Your actions shall not be affected by desires and emotions</h1>
+
+    </center>
 </body>
 </html>
