--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <style>
 body {
-    color: rgb(190, 205, 50);
+    color: black;
     background-color: black;
-    font-family:  Tahoma, 'Segoe UI',Geneva, Verdana, sans-serif;
+    text-shadow: 0px 0px 5px rgb(190, 205, 50);
+    font-family:  'Helvetica Neue',Roboto,-apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',  sans-serif;
   }
 </style>
 <html>
 <body>
     <center>
-<h3>The 8 holy rules of Leros</h3>
+<h1>The 8 holy rules of Leros</h1>
 <br>
-<h1>1. Your actions shall not be affected by desires and emotions</h1>
-
+<h3>1. Always have a goal in mind.</h3>
+<br>
+<h3>2. Your actions shall not be affected by desires and emotions.</h3>
+<br>
+<h2>3. No sex.</h2>
+<br>
+<h3>4. Your actions shall not be affected by desires and emotions</h3>
     </center>
 </body>
 </html>
