--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <style>
 body {
-    color: black;
+    color: rgb(228, 231, 208);
     background-color: black;
     text-shadow: 0px 0px 5px rgb(190, 205, 50);
-    font-family:  'Helvetica Neue',Roboto,-apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',  sans-serif;
+    font-size: large;
+    font-family:  'Helvetica Neue',Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',  sans-serif;
   }
 </style>
 <html>
@@ -18,7 +19,15 @@ body {
 <br>
 <h2>3. No sex.</h2>
 <br>
-<h3>4. Your actions shall not be affected by desires and emotions</h3>
+<h3>4. Do not grow attached to anyone or anything.</h3>
+<br>
+<h3>5. Rely only on the power of your own self.</h3>
+<br>
+<h3>6. You are your own god.</h3>
+<br>
+<h3>7. In case of emergency, losing sanity is better than losing life.</h3>
+<br>
+<h3>7. In case of emergency, losing sanity is better than losing life.</h3>
     </center>
 </body>
 </html>
