--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 <br>
 <h3>7. In case of emergency, losing sanity is better than losing life.</h3>
 <br>
-<h3>7. In case of emergency, losing sanity is better than losing life.</h3>
+<h3>8. Do not fret over anything.</h3>
     </center>
 </body>
 </html>
