--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@ body {
 <br>
 <h3>7. In case of emergency, losing sanity is better than losing life.</h3>
 <br>
-<h3>8. Do not fret over anything.</h3>
+<h3>8. Worry not.</h3>
+What you perceive as your entire reality, is incredibly miniscule
+<br>in the large picture. Most things do not matter with this view,
+<br>so worry not.
     </center>
 </body>
 </html>
