--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@ body {
     font-size: large;
     font-family:  'Helvetica Neue',Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',  sans-serif;
   }
+.square {
+  height: 50px;
+  width: 50px;
+  background-color: rgb(99, 104, 51);
+}
 </style>
 <html>
 <body>
     <center>
 <h1>The 8 holy rules of Leros</h1>
+<br>Keep yourself constantly occupied and do not let any shortcomings
+<br>be created in you while wandering without a goal. Keep multiple 
+<br>goals if you believe you might achieve your current one soon.
 <br>
 <h3>1. Always have a goal in mind.</h3>
 <br>
@@ -28,7 +36,7 @@ body {
 <h3>7. In case of emergency, losing sanity is better than losing life.</h3>
 <br>
 <h3>8. Worry not.</h3>
-What you perceive as your entire reality, is incredibly miniscule
+<br>What you perceive as your entire reality, is incredibly miniscule
 <br>in the large picture. Most things do not matter with this view,
 <br>so worry not.
     </center>
