--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <style>
 body {
     color: rgb(228, 231, 208);
-    background-color: black;
+    background-color: rgb(36, 37, 33);
     text-shadow: 0px 0px 5px rgb(190, 205, 50);
     font-size: large;
     font-family:  'Helvetica Neue',Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',  sans-serif;
@@ -17,7 +17,7 @@ body {
 @keyframes rotation {
   0%   {left:0px; top:0px;}
   50%  {left:200px; top:200px; transform:rotate(3600deg)}
-  100% {eft:0px; top:0px;}
+  100% {left:0px; top:0px;}
 }
 </style>
 <html>
@@ -31,8 +31,16 @@ body {
 <br>goals if you believe you might achieve your current one soon.
 <br>
 <h3>2. Your actions shall not be affected by desires and emotions.</h3>
+<br>The only true being that can be considered you is your mind and
+<br>your thoughts. Do not be affected by any external desires and
+<br>emotions which are in no way yours.
 <br>
 <h2>3. No sex.</h2>
+<br>The greatest suffering anyone can experience is to be born.
+<br>To create this sufferring is the worst thing any single person
+<br>may do. Although sex for the sake of fulfilling your desire
+<br>often isn't done with the goal of creating new life, that act
+<br>still breaks the previous and is in many ways horrendous.
 <br>
 <h3>4. Do not grow attached to anyone or anything.</h3>
 <br>
