--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ body {
   width: 50px;
   background-color: rgb(99, 104, 51);
   animation-name: rotation;
-  animation-duration: 4s;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
 }
 @keyframes rotation {
   0%   {left:0px; top:0px;}
