--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@ body {
 <br>still breaks the previous and is in many ways horrendous.
 <br>
 <h3>4. Do not grow attached to anyone or anything.</h3>
+<br>Humans easily grow attached to things, even ones not in their
+<br>reality. While it is their distinct trait, it leaves them
+<br>with many openings and weaknesses, while not gaining much.
 <br>
 <h3>5. Rely only on the power of your own self.</h3>
+<br>As with growing attached to things, relying on others is
+<br>another trait of humans. This, again, is not something to 
+<br>be proud of. Relying creates weakness instead of the 
+<br>strength one could gain from getting through a difficulty.
 <br>
 <h3>6. You are your own god.</h3>
 <br>
