--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ body {
     font-family:  'Helvetica Neue',Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',  sans-serif;
   }
 .square {
+  position: relative;
   height: 50px;
   width: 50px;
   background-color: rgb(99, 104, 51);
