--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 }
 @keyframes rotation {
   0%   {left:0px; top:0px;}
-  50%  {left:200px; top:200px; transform:rotate(3600deg)}
+  50%  {left:100%; top:100%; transform:rotate(3600deg)}
   100% {left:0px; top:0px;}
 }
 </style>
