--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ body {
   position: relative;
   height: 50px;
   width: 50px;
-  background-color: rgb(99, 104, 51);
+  background-color: rgb(60, 61, 45);
   animation-name: rotation;
   animation-duration: 30s;
   animation-iteration-count: infinite;
 }
 @keyframes rotation {
   0%   {left:0px; top:0px;}
-  50%  {left:100%; top:100%; transform:rotate(3600deg)}
+  50%  {left:100%; top:-100%; transform:rotate(3600deg)}
   100% {left:0px; top:0px;}
 }
 </style>
@@ -56,6 +56,13 @@ body {
 <br>strength one could gain from getting through a difficulty.
 <br>
 <h3>6. You are your own god.</h3>
+<br>There is no way to prove there even is a reality.
+<br>To simply put it, the only possibilities are that
+<br>you are perceiving a reality or creating your own.
+<br>In both cases, the end result, which is important
+<br>to you, is all in your head. This means that you
+<br>can shape reality through your own will, even if
+<br>this isn't an absolute power.
 <br>
 <h3>7. In case of emergency, losing sanity is better than losing life.</h3>
 <br>
