--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <style>
 body {
     color: rgb(228, 231, 208);
-    background-color: rgb(36, 37, 33);
+    background-color: rgb(25, 26, 24);
     text-shadow: 0px 0px 5px rgb(190, 205, 50);
     font-size: large;
     font-family:  'Helvetica Neue',Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',  sans-serif;
@@ -11,7 +11,7 @@ body {
   position: relative;
   height: 50px;
   width: 50px;
-  background-color: rgb(60, 61, 45);
+  background-color: rgb(87, 90, 47);
   animation-name: rotation;
   animation-duration: 30s;
   animation-iteration-count: infinite;
@@ -64,7 +64,13 @@ body {
 <br>can shape reality through your own will, even if
 <br>this isn't an absolute power.
 <br>
-<h3>7. In case of emergency, losing sanity is better than losing life.</h3>
+<h3>7. Losing sanity is the only way to absolute power.</h3>
+<br>As mentioned previously, the important part of reality
+<br>is in your mind. This fact means that the bounds you
+<br>yourself have are the bounds reality has. By simply
+<br>removing those bounds, you are free to shape reality
+<br>into the best one. The act of losing these "bounds"
+<br>is often acredited to losing one's sanity.
 <br>
 <h3>8. Worry not.</h3>
 <br>What you perceive as your entire reality, is incredibly miniscule
