--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@ body {
   animation-duration: 30s;
   animation-iteration-count: infinite;
 }
+.collapsible {
+    color: rgb(228, 231, 208);
+    background-color: rgb(25, 26, 24);
+    text-shadow: 0px 0px 5px rgb(190, 205, 50);
+    font-size: large;
+    font-family:  'Helvetica Neue',Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',  sans-serif;
+  }
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  background-color: #f1f1f1;
+}
 @keyframes rotation {
   0%   {left:0px; top:0px;}
   50%  {left:100%; top:-100%; transform:rotate(3600deg)}
