--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@ body {
     text-shadow: 0px 0px 5px rgb(190, 205, 50);
     font-size: large;
     font-family:  'Helvetica Neue',Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',  sans-serif;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
   }
 .content {
   padding: 0 18px;
