--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <title>
     The 8 holy rules of Leros
 </title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
     color: rgb(228, 231, 208);
@@ -26,10 +27,8 @@ body {
     font-size: large;
     font-family:  'Helvetica Neue',Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',  sans-serif;
     cursor: pointer;
-    padding: 18px;
     width: 100%;
     border: none;
-    text-align: left;
     outline: none;
   }
 .content {
