--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@ body {
     outline: none;
   }
 .content {
-  padding: 0 18px;
-  max-height: 50px;
+  max-height: 0px;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
@@ -70,12 +69,12 @@ body {
   <br>goals if you believe you might achieve your current one soon.
 </div>
 <br>
-<h3>2. Your actions shall not be affected by desires and emotions.</h3>
+<button type="button" class="collapsible"><h3>2. Your actions shall not be affected by desires and emotions.</h3></button>
 <br>The only true being that can be considered you is your mind and
 <br>your thoughts. Do not be affected by any external desires and
 <br>emotions which are in no way yours.
-<br>
-<h2>3. No sex.</h2>
+<br><button type="button" class="collapsible"><h2>3. No sex.</h2></button>
+
 <br>The greatest suffering anyone can experience is to be born.
 <br>To create this sufferring is the worst thing any single person
 <br>may do. Although sex for the sake of fulfilling your desire
