--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
     outline: none;
   }
 .content {
-  max-height: 0px;
+  display: none;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
@@ -42,18 +42,18 @@ body {
 }
 </style>
 <script>
-  var coll = document.getElementsByClassName("collapsible");
+var coll = document.getElementsByClassName("collapsible");
   var i;
   
   for (i = 0; i < coll.length; i++) {
     coll[i].addEventListener("click", function() {
       this.classList.toggle("active");
       var content = this.nextElementSibling;
-      if (content.style.maxHeight){
-        content.style.maxHeight = null;
+      if (content.style.display === "block") {
+        content.style.display = "none";
       } else {
-        content.style.maxHeight = content.scrollHeight + "px";
-      } 
+        content.style.display = "block";
+      }
     });
   }
 </script>
