--- a/index.html
+++ b/index.html
@@ -54,52 +54,52 @@ body {
 </div>
 <br>
 <button type="button" class="collapsible"><h3>2. Your actions shall not be affected by desires and emotions.</h3></button>
-<br>The only true being that can be considered you is your mind and
+<div class="content"><br>The only true being that can be considered you is your mind and
 <br>your thoughts. Do not be affected by any external desires and
-<br>emotions which are in no way yours.
+<br>emotions which are in no way yours.</div>
 <br><button type="button" class="collapsible"><h2>3. No sex.</h2></button>
-
+<div class="content">
 <br>The greatest suffering anyone can experience is to be born.
 <br>To create this sufferring is the worst thing any single person
 <br>may do. Although sex for the sake of fulfilling your desire
 <br>often isn't done with the goal of creating new life, that act
-<br>still breaks the previous rule and is in many ways horrendous.
+<br>still breaks the previous rule and is in many ways horrendous.</div>
 <br>
 </center>
 <div class="square"></div>
 <center>
-<h3>4. Do not grow attached to anyone or anything.</h3>
-<br>Humans easily grow attached to things, even ones not in their
+<h3><button type="button" class="collapsible">4. Do not grow attached to anyone or anything.</button></h3>
+<div class="content"><br>Humans easily grow attached to things, even ones not in their
 <br>reality. While it is their distinct trait, it leaves them
-<br>with many openings and weaknesses, while not gaining much.
+<br>with many openings and weaknesses, while not gaining much.</div>
 <br>
-<h3>5. Rely only on the power of your own self.</h3>
-<br>As with growing attached to things, relying on others is
+<h3><button type="button" class="collapsible">5. Rely only on the power of your own self.</button></h3>
+<div class="content"><br>As with growing attached to things, relying on others is
 <br>another trait of humans. This, again, is not something to 
 <br>be proud of. Relying creates weakness instead of the 
-<br>strength one could gain from getting through a difficulty.
+<br>strength one could gain from getting through a difficulty.</div>
 <br>
-<h3>6. You are your own god.</h3>
-<br>There is no way to prove there even is a reality.
+<h3><button type="button" class="collapsible">6. You are your own god.</button></h3>
+<div class="content"><br>There is no way to prove there even is a reality.
 <br>To simply put it, the only possibilities are that
 <br>you are perceiving a reality or creating your own.
 <br>In both cases, the end result, which is important
 <br>to you, is all in your head. This means that you
 <br>can shape reality through your own will, even if
-<br>this isn't an absolute power.
+<br>this isn't an absolute power.</div>
 <br>
-<h3>7. Losing sanity is the only way to absolute power.</h3>
-<br>As mentioned previously, the important part of reality
+<h3><button type="button" class="collapsible">7. Losing sanity is the only way to absolute power.</button></h3>
+<div class="content"><br>As mentioned previously, the important part of reality
 <br>is in your mind. This fact means that the bounds you
 <br>yourself have are the bounds reality has. By simply
 <br>removing those bounds, you are free to shape reality
 <br>into the best one. The act of losing these "bounds"
-<br>is often acredited to losing one's sanity.
+<br>is often acredited to losing one's sanity.</div>
 <br>
-<h3>8. Worry not.</h3>
-<br>What you perceive as your entire reality, is incredibly miniscule
+<h3><button type="button" class="collapsible">8. Worry not.</button></h3>
+<div class="content"><br>What you perceive as your entire reality, is incredibly miniscule
 <br>in the large picture. Most things do not matter with this view,
-<br>so worry not.
+<br>so worry not.</div>
     </center>
 
 </body>
