--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
     outline: none;
   }
 .content {
-  display: none;
+  max-height: 0px;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
@@ -68,18 +68,18 @@ body {
 </center>
 <div class="square"></div>
 <center>
-<h3><button type="button" class="collapsible">4. Do not grow attached to anyone or anything.</button></h3>
+  <button type="button" class="collapsible"><h3>4. Do not grow attached to anyone or anything.</h3></button>
 <div class="content"><br>Humans easily grow attached to things, even ones not in their
 <br>reality. While it is their distinct trait, it leaves them
 <br>with many openings and weaknesses, while not gaining much.</div>
 <br>
-<h3><button type="button" class="collapsible">5. Rely only on the power of your own self.</button></h3>
+<button type="button" class="collapsible"><h3>5. Rely only on the power of your own self.</h3></button>
 <div class="content"><br>As with growing attached to things, relying on others is
 <br>another trait of humans. This, again, is not something to 
 <br>be proud of. Relying creates weakness instead of the 
 <br>strength one could gain from getting through a difficulty.</div>
 <br>
-<h3><button type="button" class="collapsible">6. You are your own god.</button></h3>
+<button type="button" class="collapsible"><h3>6. You are your own god.</h3></button>
 <div class="content"><br>There is no way to prove there even is a reality.
 <br>To simply put it, the only possibilities are that
 <br>you are perceiving a reality or creating your own.
@@ -88,7 +88,7 @@ body {
 <br>can shape reality through your own will, even if
 <br>this isn't an absolute power.</div>
 <br>
-<h3><button type="button" class="collapsible">7. Losing sanity is the only way to absolute power.</button></h3>
+<button type="button" class="collapsible"><h3>7. Losing sanity is the only way to absolute power.</h3></button>
 <div class="content"><br>As mentioned previously, the important part of reality
 <br>is in your mind. This fact means that the bounds you
 <br>yourself have are the bounds reality has. By simply
@@ -96,7 +96,7 @@ body {
 <br>into the best one. The act of losing these "bounds"
 <br>is often acredited to losing one's sanity.</div>
 <br>
-<h3><button type="button" class="collapsible">8. Worry not.</button></h3>
+<button type="button" class="collapsible"><h3>8. Worry not.</h3></button>
 <div class="content"><br>What you perceive as your entire reality, is incredibly miniscule
 <br>in the large picture. Most things do not matter with this view,
 <br>so worry not.</div>
